specs/minikube/cmd.yml
apiVersion: v1
kind: Pod
metadata:
  name: robocup-dance-dev
  labels:
    app: robocup-dance
spec:
  containers:
  - name: robocup-dance-dev
    image: mhart/alpine-node:6.3.1
    command: ["sh"]
    workingDir: /usr/src/app
    stdin: true 
    tty: true
    ports:
      - containerPort: 3000
        name: service
    volumeMounts:
      - name: source
        mountPath: /usr/src/app
  volumes:
    - name: source
      hostPath:
        path: /mnt/Projects/rcj-dance-scoring
